styles for login and register

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -23,3 +23,12 @@ $font-size-large: 20px;
 
 // Spacing
 $spacing-unit: 8px;
+$max-width: 400px;
+$input-border-color: #ccd6dd;
+$input-focus-border-color: rgba(29, 161, 242, 0.5);
+$text-color: #fff;
+$error-color: red;
+$box-shadow-color: rgba(0, 0, 0, 0.1);
+$input-padding: 10px;
+$input-margin-bottom: 10px;
+$button-padding: 10px;
