--- a/client/src/styles/_postForm.scss
+++ b/client/src/styles/_postForm.scss
@@ -19,7 +19,7 @@ $post-button-hover-bg: darken($post-button-bg, 10%);
   padding: $post-padding;
   border-radius: $post-border-radius;
   box-shadow: $post-box-shadow;
-  margin: 0 auto 20px;
+  margin: 50px auto 20px;
   max-width: 600px;
 
   input,
